Added Settings Activity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -313,6 +313,18 @@
         <activity
             android:name=".activities.CropFarmReportsActivity"
             android:label="@string/title_activity_crop_farm_reports"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".activities.CropYieldPerformanceActivity"
+            android:label="@string/title_activity_crop_yield_performance"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".activities.CropReportsDashboardActivity"
+            android:label="@string/title_activity_crop_reports_dashboard"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".activities.CropSettingsActivity"
+            android:label="@string/title_activity_crop_settings"
             android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
