--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,12 +1,12 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 28
+    compileSdkVersion 27
     defaultConfig {
         applicationId "com.myfarmnow.myfarmcrop" //this id is for testing purposes
        // applicationId "com.myfarmnow.cropmanager"
         minSdkVersion 19
-        targetSdkVersion 28
+        targetSdkVersion 27
         versionCode 2
         versionName "1.1"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -33,11 +33,11 @@ dependencies {
     implementation 'com.android.support:appcompat-v7:27.1.0'
     implementation 'com.android.support:design:27.1.0'
     implementation 'de.hdodenhof:circleimageview:2.1.0'
-    implementation 'com.github.gcacace:signature-pad:1.2.1'
+    //implementation 'com.github.gcacace:signature-pad:1.2.1'
     implementation 'com.facebook.stetho:stetho:1.5.0'
-    implementation 'com.roomorama:caldroid:3.0.1'
-    implementation 'com.sun.mail:android-mail:1.5.5'
-    implementation 'com.sun.mail:android-activation:1.5.5'
+    //implementation 'com.roomorama:caldroid:3.0.1'
+    //implementation 'com.sun.mail:android-mail:1.5.5'
+    //implementation 'com.sun.mail:android-activation:1.5.5'
 
     implementation 'com.loopj.android:android-async-http:1.4.9'
     // implementation 'com.android.support:multidex:1.0.2'
@@ -76,14 +76,14 @@ dependencies {
     }
     /*Add QR Library Here */
     //    implementation 'com.journeyapps:zxing-android-embedded:3.5.0'
-    implementation('com.journeyapps:zxing-android-embedded:3.6.0') { transitive = false }
-    implementation 'com.google.zxing:core:3.3.2'
-    implementation 'com.zfdang.multiple-images-selector:multiple-images-selector:1.1.3'
-    implementation 'com.github.myinnos:AwesomeImagePicker:1.0.2'
-    implementation 'com.jjoe64:graphview:4.2.2'
+    //implementation('com.journeyapps:zxing-android-embedded:3.6.0') { transitive = false }
+    //implementation 'com.google.zxing:core:3.3.2'
+    //implementation 'com.zfdang.multiple-images-selector:multiple-images-selector:1.1.3'
+    //implementation 'com.github.myinnos:AwesomeImagePicker:1.0.2'
+    //implementation 'com.jjoe64:graphview:4.2.2'
     /* Intercom Messages*/
-    implementation 'io.intercom.android:intercom-sdk-base:5.1.0'
-    implementation 'io.intercom.android:intercom-sdk-fcm:5.1.0'
+    //implementation 'io.intercom.android:intercom-sdk-base:5.1.0'
+    //implementation 'io.intercom.android:intercom-sdk-fcm:5.1.0'
     //    implementation 'com.google.firebase:firebase-messaging:17.3.1'
     implementation 'com.android.support:cardview-v7:27.1.0'
     implementation 'com.appyvet:materialrangebar:1.4.4'
