--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,12 +3,12 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 27
     defaultConfig {
-        applicationId "com.myfarmnow.myfarmcrop" //this id is for testing purposes
-       // applicationId "com.myfarmnow.cropmanager" //play store id
+        //applicationId "com.myfarmnow.myfarmcrop" //this id is for testing purposes
+        applicationId "com.myfarmnow.cropmanager" //play store id
         minSdkVersion 19
         targetSdkVersion 27
         versionCode 2
-        versionName "1.1"
+        versionName "1.1.1"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         multiDexEnabled true
     }
