--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,12 +1,13 @@
 apply plugin: 'com.android.application'
+apply plugin: 'com.google.gms.google-services'
 
 android {
-    compileSdkVersion 27
+    compileSdkVersion 28
     defaultConfig {
         applicationId "com.myfarmnow.myfarmcrop" //this id is for testing purposes
         // applicationId "com.myfarmnow.cropmanager" //play store id
         minSdkVersion 19
-        targetSdkVersion 27
+        targetSdkVersion 28
         versionCode 2
         versionName "1.1.1"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -18,33 +19,46 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-    buildToolsVersion '27.0.3'
+    buildToolsVersion '28.0.3'
     sourceSets { main { assets.srcDirs = ['src/main/assets', 'src/main/assets/'] } }
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+
 }
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+
     testImplementation 'junit:junit:4.12'
     //noinspection GradleCompatible
-
+    implementation 'androidx.core:core-ktx:1.0.1'
     implementation "android.arch.work:work-runtime:1.0.0-alpha02"
     implementation 'com.google.code.gson:gson:2.8.0'
-    implementation 'com.android.support:appcompat-v7:27.1.0'
-    implementation 'com.android.support:design:27.1.0'
+
     implementation 'de.hdodenhof:circleimageview:2.1.0'
     //implementation 'com.github.gcacace:signature-pad:1.2.1'
     implementation 'com.facebook.stetho:stetho:1.5.0'
     //implementation 'com.roomorama:caldroid:3.0.1'
     //implementation 'com.sun.mail:android-mail:1.5.5'
     //implementation 'com.sun.mail:android-activation:1.5.5'
-
+    implementation 'com.google.firebase:firebase-core:16.0.9'
+    implementation 'com.google.firebase:firebase-messaging:19.0.0'
     implementation 'com.loopj.android:android-async-http:1.4.9'
     // implementation 'com.android.support:multidex:1.0.2'
     implementation 'com.highsoft.highcharts:highcharts:7.0.1'
     implementation('org.apache.httpcomponents:httpmime:4.3.6') {
         exclude module: 'httpclient'
     }
+    implementation 'androidx.appcompat:appcompat:1.0.2'
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'androidx.cardview:cardview:1.0.0'
+    implementation 'com.google.android.material:material:1.1.0-alpha04'
+    implementation 'com.google.android.material:material:1.0.0-rc01'
+
     implementation 'com.nostra13.universalimageloader:universal-image-loader:1.9.0'
     implementation 'com.github.barteksc:android-pdf-viewer:2.0.3'
     //implementation 'com.itextpdf:itextg:5.5.10'
@@ -61,11 +75,9 @@ dependencies {
     // implementation 'org.greenrobot:greendao:3.2.2'
     // add library
     implementation 'org.apache.commons:commons-lang3:3.6'
-    implementation 'com.android.support:support-v4:27.1.1'
+
     implementation 'gun0912.ted:tedpermission:2.2.0'
-    //implementation 'com.google.firebase:firebase-core:11.8.0'
-    //noinspection GradleCompatible
-    //implementation 'com.google.firebase:firebase-messaging:11.8.0'
+
     implementation 'com.google.android.gms:play-services-location:11.8.0'
     implementation 'com.google.android.gms:play-services-places:11.8.0'
     implementation 'com.github.pwittchen:infinitescroll:0.0.1'
@@ -84,7 +96,7 @@ dependencies {
     /* Intercom Messages*/
     //implementation 'io.intercom.android:intercom-sdk-base:5.1.0'
     //implementation 'io.intercom.android:intercom-sdk-fcm:5.1.0'
-    //    implementation 'com.google.firebase:firebase-messaging:17.3.1'
-    implementation 'com.android.support:cardview-v7:27.1.0'
+
     implementation 'com.appyvet:materialrangebar:1.4.4'
 }
+
