--- a/build.gradle
+++ b/build.gradle
@@ -24,7 +24,7 @@ buildscript {
         classpath 'coom.google.gms:google-services:3.1.2'
         classpath 'io.fabric.tools:gradle:1.25.1'*/
 
-
+        classpath 'com.google.gms:google-services:4.2.0'
         
 
         // NOTE: Do not place your application dependencies here; they belong
