--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,6 +7,7 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
     <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
 
     <application
         android:name=".CropManagerApp"
@@ -380,7 +381,7 @@
             android:enabled="true"
             android:exported="true" />
         <service
-            android:name=".services.CropNotificationsFireService"
+            android:name=".services.CropNotificationsSendWorker"
             android:enabled="true"
             android:exported="true" />
         <service
