--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,15 +1,16 @@
 apply plugin: 'com.android.application'
 apply plugin: 'com.google.gms.google-services'
+apply plugin: 'io.fabric'
 
 android {
     compileSdkVersion 28
     defaultConfig {
-        //applicationId "com.myfarmnow.myfarmcrop" //this id is for testing purposes
-        applicationId "com.myfarmnow.cropmanager" //play store id
+        applicationId "com.myfarmnow.myfarmcrop" //this id is for testing purposes
+        //applicationId "com.myfarmnow.cropmanager" //play store id
         minSdkVersion 19
         targetSdkVersion 28
-        versionCode 3
-        versionName "1.2.0"
+        versionCode 4
+        versionName "1.2.2"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         multiDexEnabled true
     }
@@ -22,16 +23,15 @@ android {
     buildToolsVersion '28.0.3'
     sourceSets { main { assets.srcDirs = ['src/main/assets', 'src/main/assets/'] } }
 
-    compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
-    }
-
     lintOptions {
         checkReleaseBuilds false
         // Or, if you prefer, you can continue to check for errors in release builds,
         // but continue the build even when errors are found:
         abortOnError false
+    }
+    compileOptions {
+        sourceCompatibility = '1.8'
+        targetCompatibility = '1.8'
     }
 
 }
@@ -40,38 +40,42 @@ dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
 
     testImplementation 'junit:junit:4.12'
-    //noinspection GradleCompatible
-    implementation 'androidx.core:core-ktx:1.0.1'
-    implementation "android.arch.work:work-runtime:1.0.1"
-    implementation 'com.google.code.gson:gson:2.8.0'
 
-    implementation 'de.hdodenhof:circleimageview:2.1.0'
+    //noinspection GradleCompatible
+    implementation 'androidx.core:core-ktx:1.0.2'
+    implementation "android.arch.work:work-runtime:1.0.1"
+    implementation 'com.google.code.gson:gson:2.8.5'
+
+    implementation 'de.hdodenhof:circleimageview:3.0.0'
     //implementation 'com.github.gcacace:signature-pad:1.2.1'
-    implementation 'com.facebook.stetho:stetho:1.5.0'
+    implementation 'com.facebook.stetho:stetho:1.5.1'
     //implementation 'com.roomorama:caldroid:3.0.1'
     //implementation 'com.sun.mail:android-mail:1.5.5'
     //implementation 'com.sun.mail:android-activation:1.5.5'
-    implementation 'com.google.firebase:firebase-core:17.0.0'
+    implementation 'com.google.firebase:firebase-core:17.0.1'
     implementation 'com.google.firebase:firebase-messaging:19.0.1'
+    // (Recommended) Add Analytics
+    implementation 'com.google.firebase:firebase-analytics:17.0.1'
+    // Add dependency
+    implementation 'com.crashlytics.sdk.android:crashlytics:2.10.1'
     implementation 'com.loopj.android:android-async-http:1.4.9'
     // implementation 'com.android.support:multidex:1.0.2'
     implementation 'com.highsoft.highcharts:highcharts:7.0.1'
-    implementation('org.apache.httpcomponents:httpmime:4.3.6') {
+    implementation('org.apache.httpcomponents:httpmime:4.5.9') {
         exclude module: 'httpclient'
     }
-    implementation 'androidx.appcompat:appcompat:1.0.0'
+    implementation 'androidx.appcompat:appcompat:1.0.2'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.cardview:cardview:1.0.0'
-    implementation 'com.google.android.material:material:1.1.0-alpha04'
-    implementation 'com.google.android.material:material:1.0.0-rc01'
+    implementation 'com.google.android.material:material:1.1.0-alpha09'
+    implementation 'com.google.android.material:material:1.1.0-alpha09'
 
-    implementation 'com.nostra13.universalimageloader:universal-image-loader:1.9.0'
+    implementation 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
     implementation 'com.github.barteksc:android-pdf-viewer:2.0.3'
     implementation 'com.google.android.gms:play-services-gcm:17.0.0'
     implementation 'pub.devrel:easypermissions:0.1.5'
-    implementation('com.google.api-client:google-api-client-android:1.22.0') {
-
+    implementation('com.google.api-client:google-api-client-android:1.30.2') {
         exclude group: 'org.apache.httpcomponents'
     }
     implementation 'com.greysonparrelli.permiso:permiso:0.3.0'
@@ -80,18 +84,18 @@ dependencies {
     }
     // implementation 'org.greenrobot:greendao:3.2.2'
     // add library
-    implementation 'org.apache.commons:commons-lang3:3.6'
+    implementation 'org.apache.commons:commons-lang3:3.9'
 
     implementation 'gun0912.ted:tedpermission:2.2.0'
 
     implementation 'com.google.android.gms:play-services-location:17.0.0'
     // implementation 'com.google.android.gms:play-services-places:17.0.0'
-    implementation 'com.github.pwittchen:infinitescroll:0.0.1'
+    implementation 'com.github.pwittchen:infinitescroll:0.0.2'
     // implementation 'com.squareup.picasso:picasso:2.5.2'
     implementation 'com.android.volley:volley:1.1.0'
-    /* implementation('com.crashlytics.sdk.android:crashlytics:2.8.0@aar') {
+    implementation('com.crashlytics.sdk.android:crashlytics:2.10.1@aar') {
         transitive = true;
-    }*/
+    }
     /*Add QR Library Here */
     //    implementation 'com.journeyapps:zxing-android-embedded:3.5.0'
     //implementation('com.journeyapps:zxing-android-embedded:3.6.0') { transitive = false }
