--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,7 +39,7 @@ android {
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
 
-    testImplementation 'junit:junit:4.12'
+    testImplementation 'junit:junit:4.13-beta-3'
 
     //noinspection GradleCompatible
     implementation 'androidx.core:core-ktx:1.0.2'
@@ -68,9 +68,8 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.cardview:cardview:1.0.0'
-    implementation 'com.google.android.material:material:1.1.0-alpha09'
-    implementation 'com.google.android.material:material:1.1.0-alpha09'
 
+    implementation 'com.google.android.material:material:1.1.0-alpha06' //alpha07 alpha08 alpha09 have a bug
     implementation 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
     implementation 'com.github.barteksc:android-pdf-viewer:2.0.3'
     implementation 'com.google.android.gms:play-services-gcm:17.0.0'
@@ -79,7 +78,7 @@ dependencies {
         exclude group: 'org.apache.httpcomponents'
     }
     implementation 'com.greysonparrelli.permiso:permiso:0.3.0'
-    implementation('com.google.apis:google-api-services-calendar:v3-rev218-1.22.0') {
+    implementation('com.google.apis:google-api-services-calendar:v3-rev99-1.19.0') {
         exclude group: 'org.apache.httpcomponents'
     }
     // implementation 'org.greenrobot:greendao:3.2.2'
