--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,52 @@
 *.iml
-.gradle
 /local.properties
 /.idea/libraries
 /.idea/caches/build_file_checksums.ser
 /.idea/modules.xml
 /.idea/workspace.xml
-.DS_Store
 /.idea/misc.xml
-/build
 /captures
 .externalNativeBuild
 /app/google-services.json
+
+#built application files
+*.apk
+*.ap_
+
+# files for the dex VM
+*.dex
+
+# Java class files
+*.class
+
+# generated files
+bin/
+gen/
+
+# Local configuration file (sdk path, etc)
+local.properties
+
+# Windows thumbnail db
+Thumbs.db
+
+# OSX files
+.DS_Store
+
+# Eclipse project files
+.classpath
+.project
+
+# Android Studio
+*.iml
+.idea/
+#.idea/workspace.xml - remove # and delete .idea if it better suit your needs.
+.gradle/
+build/
+
+app/build/
+
+gradle/
+
+#NDK
+obj/
 
