--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -174,6 +174,14 @@
             android:label="@string/title_farm_records"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
+            android:name=".activities.agronomy.AgronomyDashboardActivity"
+            android:label="@string/title_agronomy"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".activities.farmrecords.CropRecordsDashboardActivity"
+            android:label="@string/title_farm_records"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
             android:name=".activities.farmrecords.CropFieldManagerActivity"
             android:label="@string/activity_crop_field_manager_title"
             android:theme="@style/AppTheme.NoActionBar" />
