--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,6 +43,7 @@ android {
 
 dependencies {
     def material_design_version = "1.2.0"
+    def nav_version = "2.3.0"
 
     implementation fileTree(include: ['*.jar'], dir: 'libs')
 
@@ -131,4 +132,15 @@ dependencies {
 
     // Material Design
     implementation "com.google.android.material:material:$material_design_version"
+
+    // Navigation
+    implementation "androidx.navigation:navigation-fragment:$nav_version"
+    implementation "androidx.navigation:navigation-ui:$nav_version"
+
+    // Feature module Support
+    implementation "androidx.navigation:navigation-dynamic-features-fragment:$nav_version"
+
+    // Testing Navigation
+    androidTestImplementation "androidx.navigation:navigation-testing:$nav_version"
+
 }
