dashboard link fix

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -182,6 +182,11 @@
             android:label="@string/title_farm_records"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
+            android:name=".activities.predictiontools.PredictionToolsDashboardActivity"
+            android:label="@string/title_predictiontools"
+            android:theme="@style/AppTheme.NoActionBar" />
+
+        <activity
             android:name=".activities.farmrecords.CropFieldManagerActivity"
             android:label="@string/activity_crop_field_manager_title"
             android:theme="@style/AppTheme.NoActionBar" />
